Initial commit: GUI Python project

--- a/index.html
+++ b/index.html
@@ -56,19 +56,30 @@
         <ol>
              <li>Google Cybersecurity Specialization - COURSERA</li>
           <li>Introduction to Cybersecurity -CISCO</li>
+            <li>Machine Lerning by Andrew NG - COURSERA</li>
           <li>AI engineer core track: LLM engineering, RAG, QLoRA Agents -
             Ed Donner -UDEMY</li>
              <li >100 Days of Code: The Complete Python Pro Bootcamp -
              -  Dr. Angela Yu -UDEMY</li>
              <li >Machine Learning A-Z: AI, Python & R + ChatGPT- Kirill Eremenko -UDEMY</li>
+            <li>Deep Learning A-Z 2025: Neural Networks, AI & ChatGPT Prize - Kirill Eremenko -UDEMY</li>
              <li>Complete Guide to TensorFlow for Deep Learning with Python
               -Jose Portilla-UDEMY</li>
+            <li>Learn Neural Networks using Matlab Programming - Hossein Technology -UDEMY</li>
+            <li>Digital Signal Processing with MATLAB- Hossein Technology -UDEMY</li>
              <li>Master Computer Vision™ OpenCV4 in Python with Deep Learning
               Master Computer Vision™ OpenCV4 like a pro while learning Dlib, Deep Learning Computer Vision <br>
               (Keras, TensorFlow & Caffe) + 21 Projects! -UDEMY</li>
-             <li>Face Detection -Master Open CV with Digital Image Processing- UDEMY
+            <li>Cluster Analysis and Unsupervised Machine Learning in Python - The lazy programmer -UDEMY</li>
+            <li>Face Detection -Master Open CV with Digital Image Processing- UDEMY</li>
+            <li>Become a WordPress Developer: Unlocking Power With Code - Brad Schiff -UDEMY</li>
+            <li>Learn and understand C++ - Ermin Kreponic- UDEMY</li>
+            <LI>The complete web developer course 3.0 -Rob Percival -UDEMY</LI>
                <li>Darkweb - CEPOL</li>
           <li>Cybercrime - CEPOL</li>
+            <li>Εκπαίδευση σημείων επαφής για το κυβερνοέγκλημα - Persons of contact (POC) on Cybercrime (series of 4 webinars)-Διεύθυνση Δίωξης Ηλεκτρονικού Εγκλήματος</li>
+            <li>Impact of the use of AI technology in the field of internal
+security: threats, opportunities, and outlooks for European LE - CEPOL</li>
              </ol>
 
       </section>
